--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 </head>
 
 <body>
+    <div class="container">
+        <h1>Doğum Günü Sayacı</h1>
+    <div id="countdown"></div>
+    </div>
+     <script src="script.js"></script>
+
+
+         
     <a href="index1.html"> <i class=""></i>Anasayfa </a>
     <div id="container">
         <div class="kutu1">
