--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             
         </div>
-        <p>Sınava Kalan Gün</p>
+        <p>DOĞUM GÜNÜ</p>
         <div class="kutu6">
             
             <input type="button" onclick="tarihGetir()" value="Tarih Getir">
