--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Doğum Günü Sayacı</h1>
-    <div id="countdown"></div>
+  <div class="countdown">
+        <h1>Doğum Gününe Ne Kadar Kaldı?</h1>
+        <div id="timer"></div>
     </div>
-     <script src="script.js"></script>
+    <script src="script.js"></script>   
 
 
          
