--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-  <div class="countdown">
+<div class="countdown-container">
         <h1>Doğum Gününe Ne Kadar Kaldı?</h1>
-        <div id="timer"></div>
+        <div id="countdown"></div>
     </div>
-    <script src="script.js"></script>   
+    <script src="script.js"></script>
 
 
          
