--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,18 @@
 
 </head>
 <body>
+ <div class="countdown-container">
+        <h1>Doğum Gününe Ne Kadar Kaldı?</h1>
+        <div id="countdown"></div>
+    </div>
+    <script src="script.js"></script>
+
+
+
+
+
+
+    
    <div id="kutu" >
 <div id="logo">
   <a href=""> <img src="pic/caaa.png" width="150" height="150"></a>
