--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="countdown-container">
+    <div class="countdown">
         <h1>Doğum Gününe Ne Kadar Kaldı?</h1>
-        <div id="countdown"></div>
+        <div id="timer"></div>
     </div>
     <script src="script.js"></script>
 </body>
